--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html"><img src="/images/logo.png" alt="" class="logo-image"></a>
+        <a class="navbar-brand" href="/DragonBall/index.html"><img src="logo.png" alt="" class="logo-image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link px-3" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link px-3" href="/DragonBall/index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link px-3 color-nav" href="/about.html">About</a>
+                    <a class="nav-link px-3 color-nav" href="/DragonBall/about.html">About</a>
                 </li>
             </ul>
         </div>
@@ -38,24 +38,24 @@
     <!-- Heading -->
     <div class="container-fluid">
         <div class="col-md-12 col-sm-12">
-            <h1 class="heading text-center"><img src="/images/text_dragon_ball.png" alt=""><span style="font-weight: bolder;">Pedia</span></h1>
+            <h1 class="heading text-center"><img src="text_dragon_ball.png" alt=""><span style="font-weight: bolder;">Pedia</span></h1>
         </div>
     </div>
 
     <!-- Dragon Ball Linear -->
     <section>
         <div class="container-fluid single-ball lax" data-lax-translate-y="0 0, 400 -400" data-lax-opacity="0 1, 100 0">
-            <img src="/images/Ball 1 Star.png" alt="" class="one single-ball-image">
-            <img src="/images/Ball 2 Stars.png" alt="" class="two single-ball-image">
-            <img src="/images/Ball 3 Stars.png" alt="" class="three single-ball-image">
-            <img src="/images/Ball 4 Stars.png" alt="" class="four single-ball-image">
-            <img src="/images/Ball 5 Stars.png" alt="" class="five single-ball-image">
-            <img src="/images/Ball 6 Stars.png" alt="" class="six single-ball-image">
-            <img src="/images/Ball 7 Stars.png" alt="" class="seven single-ball-image">
+            <img src="Ball 1 Star.png" alt="" class="one single-ball-image">
+            <img src="Ball 2 Stars.png" alt="" class="two single-ball-image">
+            <img src="Ball 3 Stars.png" alt="" class="three single-ball-image">
+            <img src="Ball 4 Stars.png" alt="" class="four single-ball-image">
+            <img src="Ball 5 Stars.png" alt="" class="five single-ball-image">
+            <img src="Ball 6 Stars.png" alt="" class="six single-ball-image">
+            <img src="Ball 7 Stars.png" alt="" class="seven single-ball-image">
         </div>
         <div class="container-fluid lax" data-lax-translate-y="0 0, 400 -400" data-lax-opacity="0 1, 100 0">
             <h4 class="single-ball-text">You Have Collected All 7 Dragon Balls!</h4>
-            <h4 class="single-ball-text-two">Now Scroll Down To Gather Them<br><img src="/images/scroll.png" alt=""
+            <h4 class="single-ball-text-two">Now Scroll Down To Gather Them<br><img src="scroll.png" alt=""
                     class="scroll"></h4>
         </div>
     </section>
@@ -63,10 +63,10 @@
     <!-- Dragon Ball Gather -->
     <section>
         <div class="container drgaon-balls-together lax" data-lax-translate-y="0 0, 400 -300">
-            <img src="/images/dragon_balls.png" alt="" class="drgaon-balls-together-img">
+            <img src="dragon_balls.png" alt="" class="drgaon-balls-together-img">
         </div>
         <div class="container container-scroll text-center">
-            <img src="/images/scroll.png" alt="" class="scroll-two">
+            <img src="scroll.png" alt="" class="scroll-two">
         </div>
         <div class="container drgaon-balls-together-text lax" data-lax-translate-y="0 0, 400 -300">
             <h4>Great! You Have Gathered All The Dragon Balls</h4>
@@ -80,7 +80,7 @@
     <!-- Shinron -->
     <section class="shinron-body">
         <div class="container shinron-image-container">
-            <img src="/images/shinron.png" alt="" class="shinron-image">
+            <img src="shinron.png" alt="" class="shinron-image">
         </div>
         <div class="container shinron-text">
             <h4>I'm "Shenron" Why Have You Summoned Me?</h4>
@@ -92,23 +92,23 @@
             <div class="logo-names">
                 <div class="row">
                     <div class="col-md-4 col-sm-12 text-center">
-                        <a href="/db.html"><img src="/images/dragon_ball.png" alt="" class="logo-name"></a>
-                        <a href="/db.html"><img src="/images/dragon_ball.jpg" alt="" class="dragon-ball"></a>
+                        <a href="/db.html"><img src="dragon_ball.png" alt="" class="logo-name"></a>
+                        <a href="/db.html"><img src="dragon_ball.jpg" alt="" class="dragon-ball"></a>
                         <p>The series follows the adventures of the protagonist, Son Goku, from his childhood...</p>
-                        <button type="button" class="btn btn-danger btn-sm button-select button-select-one"><a href="/db.html">Know More...</a></button>
+                        <button type="button" class="btn btn-danger btn-sm button-select button-select-one"><a href="/DragonBall/db.html">Know More...</a></button>
                     </div>
                     <div class="col-md-4 col-sm-12 text-center">
-                        <a href="/dbz.html"><img src="/images/dragon_ball_z.png" alt="" class="logo-name-z"></a>
-                        <a href="/dbz.html"><img src="/images/dragon_ball_Z.jpg" alt="" class="dragon-ball"></a>
+                        <a href="/dbz.html"><img src="/dragon_ball_z.png" alt="" class="logo-name-z"></a>
+                        <a href="/dbz.html"><img src="dragon_ball_Z.jpg" alt="" class="dragon-ball"></a>
                         <p>Dragon Ball Z continues the adventures of Goku, who, along with his companions...</p>
-                        <button type="button" class="btn btn-danger btn-sm button-select button-select-two"><a href="/dbz.html">Know More...</a></button>
+                        <button type="button" class="btn btn-danger btn-sm button-select button-select-two"><a href="/DragonBall/dbz.html">Know More...</a></button>
                     </div>
                     <div class="col-md-4 col-sm-12 text-center">
-                        <a href="/dbs.html"><img src="/images/dragon_ball_super.png" alt="" class="logo-name-super"></a>
-                        <a href="/dbs.html"><img src="/images/dragon_ball_super.jpg" alt="" class="dragon-ball"></a>
+                        <a href="/dbs.html"><img src="dragon_ball_super.png" alt="" class="logo-name-super"></a>
+                        <a href="/dbs.html"><img src="dragon_ball_super.jpg" alt="" class="dragon-ball"></a>
                         <p>Goku attains the powers of a god, he must learn to use this newly discovered
                             powers...<br></p>
-                            <button type="button" class="btn btn-danger btn-sm button-select button-select-three"><a href="/dbs.html">Know More...</a></button>
+                            <button type="button" class="btn btn-danger btn-sm button-select button-select-three"><a href="/DragonBall/dbs.html">Know More...</a></button>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
 
     <section>
         <div class="container text-center">
-            <p>TOEI ANIMATION Co., Ltd. All Rights Reserved.<a href="#"><img class="float-right up-arrow" src="/images/up_arrow.png" alt=""></a></p>
+            <p>TOEI ANIMATION Co., Ltd. All Rights Reserved.<a href="#"><img class="float-right up-arrow" src="up_arrow.png" alt=""></a></p>
         </div>
     </section>
 
