--- a/dbs.html
+++ b/dbs.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html"><img src="/images/logo.png" alt="" class="logo-image"></a>
+        <a class="navbar-brand" href="/DragonBall/index.html"><img src="logo.png" alt="" class="logo-image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link px-3" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link px-3" href="/DragonBall/index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link px-3 color-nav" href="/about.html">About</a>
+                    <a class="nav-link px-3 color-nav" href="/DragonBall/about.html">About</a>
                 </li>
             </ul>
         </div>
@@ -38,13 +38,13 @@
     <!-- Heading -->
     <div class="container-fluid">
         <div class="col-md-12 col-sm-12">
-            <h1 class="heading text-center"><img src="/images/text_dragon_ball.png" alt=""><span
+            <h1 class="heading text-center"><img src="text_dragon_ball.png" alt=""><span
                     style="font-weight: bolder;">Pedia</span></h1>
         </div>
     </div>
 
     <div class="container text-center my-5">
-        <img src="/images/dragon_ball_super.png" alt="" class="img-fluid">
+        <img src="dragon_ball_super.png" alt="" class="img-fluid">
     </div>
     <div class="container">
         <h5 class="text-center db-text">The series' plot begins showing the aftermath of the Majin Buu Saga, then
@@ -55,39 +55,39 @@
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/dbsuper3.jpg" alt="" class="img-fluid">
+                <img src="dbsuper3.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/dbsuper1.jpg" alt="" class="img-fluid">
+                <img src="dbsuper1.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/dbsupergohan.jpg" alt="" class="img-fluid">
+                <img src="dbsupergohan.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/dbsuperzamasu.jpg" alt="" class="img-fluid">
+                <img src="dbsuperzamasu.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/dbsuperred.jpg" alt="" class="img-fluid">
+                <img src="dbsuperred.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/dragon-ball-super-broly.jpg" alt="" class="img-fluid">
+                <img src="dragon-ball-super-broly.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/db-super-big.jpg" alt="" class="img-fluid">
+                <img src="db-super-big.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/aui.jpg" alt="" class="img-fluid">
+                <img src="aui.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/aui2.jpg" alt="" class="img-fluid">
+                <img src="aui2.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
     <section>
         <div class="container text-center">
             <p>TOEI ANIMATION Co., Ltd. All Rights Reserved.<a href="#"><img class="float-right up-arrow"
-                        src="/images/up_arrow.png" alt=""></a></p>
+                        src="up_arrow.png" alt=""></a></p>
         </div>
     </section>
 
