--- a/dbz.html
+++ b/dbz.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html"><img src="/images/logo.png" alt="" class="logo-image"></a>
+        <a class="navbar-brand" href="/DragonBall/index.html"><img src="logo.png" alt="" class="logo-image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link px-3" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link px-3" href="/DragonBall/index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link px-3 color-nav" href="/about.html">About</a>
+                    <a class="nav-link px-3 color-nav" href="/DragonBall/about.html">About</a>
                 </li>
             </ul>
         </div>
@@ -38,13 +38,13 @@
     <!-- Heading -->
     <div class="container-fluid">
         <div class="col-md-12 col-sm-12">
-            <h1 class="heading text-center"><img src="/images/text_dragon_ball.png" alt=""><span
+            <h1 class="heading text-center"><img src="text_dragon_ball.png" alt=""><span
                     style="font-weight: bolder;">Pedia</span></h1>
         </div>
     </div>
 
     <div class="container text-center my-5">
-        <img src="/images/dragon_ball_z.png" alt="" class="img-fluid">
+        <img src="dragon_ball_z.png" alt="" class="img-fluid">
     </div>
     <div class="container">
         <h5 class="text-center db-text">Dragon Ball Z continues the adventures of Goku, who, along with his companions,
@@ -56,39 +56,39 @@
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/dragon_ball_Z.jpg" alt="" class="img-fluid">
+                <img src="dragon_ball_Z.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/dbzsone.jpg" alt="" class="img-fluid">
+                <img src="dbzsone.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/dbzstwo.jpg" alt="" class="img-fluid">
+                <img src="dbzstwo.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/bdzs10ne.jpg" alt="" class="img-fluid">
+                <img src="bdzs10ne.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/dbz-two.jpg" alt="" class="img-fluid">
+                <img src="dbz-two.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/dbzs1.jpg" alt="" class="img-fluid">
+                <img src="dbzs1.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row db">
             <div class="col-md-4 db-one">
-                <img src="/images/dbz_one.jpg" alt="" class="img-fluid">
+                <img src="dbz_one.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-two">
-                <img src="/images/cell_vs_goku.jpg" alt="" class="img-fluid">
+                <img src="cell_vs_goku.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-4 db-three">
-                <img src="/images/boo and goku.jpg" alt="" class="img-fluid">
+                <img src="boo and goku.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -100,7 +100,7 @@
     <section>
         <div class="container text-center">
             <p>TOEI ANIMATION Co., Ltd. All Rights Reserved.<a href="#"><img class="float-right up-arrow"
-                        src="/images/up_arrow.png" alt=""></a></p>
+                        src="up_arrow.png" alt=""></a></p>
         </div>
     </section>
 
