--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <button type="button" class="btn btn-danger btn-sm button-select button-select-one"><a href="/DragonBall/db.html">Know More...</a></button>
                     </div>
                     <div class="col-md-4 col-sm-12 text-center">
-                        <a href="/dbz.html"><img src="/dragon_ball_z.png" alt="" class="logo-name-z"></a>
+                        <a href="/dbz.html"><img src="dragon_ball_z.png" alt="" class="logo-name-z"></a>
                         <a href="/dbz.html"><img src="dragon_ball_Z.jpg" alt="" class="dragon-ball"></a>
                         <p>Dragon Ball Z continues the adventures of Goku, who, along with his companions...</p>
                         <button type="button" class="btn btn-danger btn-sm button-select button-select-two"><a href="/DragonBall/dbz.html">Know More...</a></button>
